# recursive-sp1-verifier

./: Cargo.toml  README.md  context.md
elf/: riscv32im-succinct-zkvm-elf
jonas-groth16/: Cargo.toml
jonas-groth16/src/: lib.rs  verifier.rs
provable-program/: Cargo.toml
provable-program/src/: main.rs
prover/: Cargo.toml  build.rs
prover/src/: arkworks.rs
recursive-arkworks-program/: Cargo.toml
recursive-arkworks-program/src/: main.rs
recursive-program/: Cargo.toml
recursive-program/src/: main.rs
sha-benchmark-risc0/: Cargo.toml  README.md
sha-benchmark-risc0/host/: Cargo.toml
sha-benchmark-risc0/host/src/: main.rs
sha-benchmark-risc0/methods/: Cargo.toml
sha-benchmark-risc0/methods/guest/: Cargo.toml
sha-benchmark-risc0/methods/guest/src/: main.rs
sha-benchmark-risc0/types/: Cargo.toml
sha-benchmark-risc0/types/src/: lib.rs
simple-merkle-proofs/: Cargo.toml
simple-merkle-proofs/src/: main.rs
smt-opening-proofs/: Cargo.toml
smt-opening-proofs/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
valence-coprocessor/: Cargo.toml
valence-coprocessor/crates/core/: Cargo.toml
valence-coprocessor/crates/core/src/: lib.rs  sha3.rs
valence-coprocessor/crates/smt/: Cargo.toml
valence-coprocessor/crates/smt/src/: smt.rs
