[workspace]
members = ["provable-program", "prover", "recursive-program", "types"]
resolver = "2"

[workspace.dependencies]
borsh = { version = "1.5.5", features = ["derive"] }
types = { path = "types" }
sp1-zkvm = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/patch-bls-0.8.0" }
sp1-verifier = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/patch-bls-0.8.0" }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0-v2" }
