[workspace]
members = [
    "provable-program",
    "prover",
    "recursive-program",
    "types",
    "jonas-groth16",
]
resolver = "2"

[workspace.dependencies]
borsh = { version = "1.5.5", features = ["derive"] }
types = { path = "types" }
sp1-zkvm = "4.1.7"
sp1-verifier = "4.1.7"
jonas-groth16 = { path = "jonas-groth16", features = [
    "bls12_381",
], default-features = false }
[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0-v2" }
