[workspace]
members = [
    "provable-program",
    "prover",
    "recursive-program",
    "recursive-arkworks-program",
    "smt-opening-proofs",
    "simple-merkle-proofs",
    "types",
    "jonas-groth16",
]
resolver = "2"

[workspace.package]
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
repository = "https://github.com/timewave-computer/valence-coprocessor"

[workspace.dependencies]
valence-smt = { path = "valence-coprocessor/crates/smt", features = ["memory"] }
valence-coprocessor-core = { path = "valence-coprocessor/crates/core" }
borsh = { version = "1.5.5", features = ["derive"] }
types = { path = "types" }
sp1-zkvm = "4.1.7"
sp1-verifier = "4.1.7"
jonas-groth16 = { path = "jonas-groth16" }

anyhow = { version = "=1.0.97", default-features = false }
hashbrown = "=0.15.2"
rocksdb = "=0.23.0"


[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0-v2" }
