[package]
name = "jonas-groth16"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.5"
ark-ff = "0.5"
num-bigint = "0.4.6"
serde = "1"
bn = { version = "0.5", package = "zeropool-bn", default-features = false }
num-traits = "0.2"

ark-bls12-381 = { version = "0.5" }
ark-serialize = "0.5"
normal_bls = { package = "bls12_381", git = "https://github.com/zkcrypto/bls12_381", tag = "0.7.0" }

[features]
