[package]
name = "jonas-groth16"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.5"
ark-ff = "0.5"
num-bigint = "0.4.6"
serde = "1"
bn = { version = "0.5", package = "zeropool-bn", default-features = false }
num-traits = "0.2"

ark-bls12-381 = { version = "0.5" }
ark-serialize = "0.5"
normal_bls = { package = "bls12_381", git = "https://github.com/zkcrypto/bls12_381", tag = "0.7.0", optional = true }
sp1_bls_precompile = { package = "bls12_381", git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0-v2", optional = true }

[features]
default = ["normal"]
normal = ["normal_bls"]
sp1 = ["sp1_bls_precompile"]
