[package]
version = "0.1.0"
name = "prover"
edition = "2021"
default-run = "prover"

[[bin]]
name = "prover"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/timewave-computer/sp1", branch = "jonas/patch-bls-0.8.0", features = [
    "native-gnark",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
dotenv = "0.15.0"
sp1-verifier.workspace = true
types.workspace = true
borsh.workspace = true

[build-dependencies]
sp1-build = "4.1.7"
