[package]
version = "0.1.0"
name = "prover"
edition = "2021"
default-run = "prover"

[[bin]]
name = "prover"
path = "src/bin/main.rs"

[dependencies]
# arkworks
ark-ff = "0.5"
ark-std = "0.5"
ark-relations = "0.5"
ark-r1cs-std = { version = "0.5", features = ["std"] }
ark-bls12-381 = "0.5"
ark-snark = "0.5"
ark-groth16 = "0.5"
ark-ec = "0.5"
ark-serialize = "0.5"
ark-crypto-primitives = { version = "0.5", features = [
    "r1cs",
    "std",
    "crh",
    "default",
] }
ark-ed-on-bls12-381 = "0.5"
num-bigint = "0.4.6"

# experimental verifier
jonas-groth16.workspace = true

# sp1
sp1-sdk = { version = "4.1.7", features = ["native-gnark"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
dotenv = "0.15.0"
sp1-verifier.workspace = true
types.workspace = true
borsh.workspace = true
normal_bls = { package = "bls12_381", git = "https://github.com/zkcrypto/bls12_381", tag = "0.7.0" }

[build-dependencies]
sp1-build = "4.1.7"
