[workspace]
resolver = "2"
members = ["host", "methods", "types"]

[workspace.dependencies]
types = { path = "types" }
valence-smt = { path = "../valence-coprocessor/crates/smt", features = [
    "memory",
] }
valence-coprocessor-core = { path = "../valence-coprocessor/crates/core" }
borsh = { version = "1.5.5", features = ["derive"] }

[patch.crates-io]
sha2 = { package = "sha2", git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0", optional = true }


# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
