[package]
name = "sha_bench"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^2.0.1", default-features = false, features = [
    'std',
] }
types = { path = "../../types" }
valence-smt = { path = "../../../valence-coprocessor/crates/smt", features = [
    "memory",
] }
valence-coprocessor-core = { path = "../../../valence-coprocessor/crates/core" }
borsh = { version = "1.5.5", features = ["derive"] }
