[package]
name = "valence-coprocessor-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Sparse Merkle tree implementation for the Valence protocol"

[dependencies]
blake3 = { version = "=1.6.1", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { package = "sha3", git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0", optional = true }

[features]
default = ["sha2"]
blake3 = ["dep:blake3"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
